# apicurio-confluent-schema-investigation

./: .gitignore  Makefile  README.md  apicurio.txt  buf.gen.yaml  build.gradle.kts  confluent.txt  docker-compose.yml  go.mod  go.sum  settings.gradle.kts
go-producer/: main.go
java-producer/: build.gradle.kts
java-producer-plain/: build.gradle.kts
java-producer-plain/src/main/java/org/example/javaproducerplain/: JavaProtobufPlainProducer.java
java-producer/src/main/java/org/example/javaproducer/: JavaProtobufConsumer.java  JavaProtobufProducer.java
kafbat-proto/example/v1/: address.proto  event_metadata.proto  tenant.proto
proto/example/v1/: customer_event.proto
python-producer/: producer.py  pyproject.toml
