[project]
name = "python-producer"
version = "0.1.0"
description = "Kafka protobuf producer for schema registry testing"
requires-python = ">=3.14"
dependencies = [
  "confluent-kafka[protobuf]>=2.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
